deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-hello-world-deployment
spec:
  replicas: 3 # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: react-hello-world
  template:
    metadata:
      labels:
        app: react-hello-world
    spec:
      containers:
        - name: react-hello-world
          image: dev3l/node-react-webpack-hello-world
          ports:
            - containerPort: 8080
