service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-hello-world-service
spec:
  selector:
    app: react-hello-world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
